@@ -403,11 +403,11 @@ The tag name.
 =head1 Support
 
 This module is stored in an open L<GitHub
-repository|http://github.com/theory/pgxn-api-searcher/>. Feel free to fork and
+repository|http://github.com/pgxn/pgxn-api-searcher/>. Feel free to fork and
 contribute!
 
 Please file bug reports via L<GitHub
-Issues|http://github.com/theory/pgxn-api-searcher/issues/> or by sending mail to
+Issues|http://github.com/pgxn/pgxn-api-searcher/issues/> or by sending mail to
 L<bug-PGXN-API-Searcher@rt.cpan.org|mailto:bug-PGXN-API-Searcher@rt.cpan.org>.
 
 =head1 See Also
