@@ -1,6 +1,7 @@
 Revision history for Perl extension PGXN-API-Searcher.
 
 0.10.2
+      - Updated GitHub URLs to point to `/pgxn/` rather than `/theory/`.
 
 0.10.1  2011-11-08T17:48:20Z
       - Fixed test to be neutral about scores, since Lucy is prone to changing
